# pyindi-client

swig-indi/swig-indi-python/: test-indiserver.py
swig-indi/swig-indi-python/libindiserver/: libindiserver.c  libindiserver.h
trunk/swig-indi/swig-indi-python/: CMakeLists.txt  README.indiserver  indiserverpython.i
trunk/swig-indi/swig-indi-python/libindiserver/: CMakeLists.txt  config.h.cmake  indiserver.c
